--- a/help.html
+++ b/help.html
@@ -74,11 +74,11 @@
       checkButtons(x, y);
     }
 
-    function clicks(evt) {
-      var x = evt.clientX;
-      var y = evt.clientY;
-      checkButtons(x, y);
-    }
+//    function clicks(evt) {
+      //var x = evt.clientX;
+      //var y = evt.clientY;
+      //checkButtons(x, y);
+    //}
 
     function checkButtons(x, y) {
       for (var i = 0; i < buttons.length; i++) {
@@ -93,7 +93,7 @@
       loadBackgroundImage();
       setButtons();
       window.addEventListener('touchstart', touches);
-      window.addEventListener('click', clicks);
+//      window.addEventListener('click', clicks);
     }
   </script>
 </body>
