--- a/leaderboard.html
+++ b/leaderboard.html
@@ -167,7 +167,7 @@
         draw();
         setButtons();
         window.addEventListener('touchstart', touches);
-        window.addEventListener('click', clicks);
+  //      window.addEventListener('click', clicks);
     }
     </script>
 </body>
