--- a/settings.html
+++ b/settings.html
@@ -23,7 +23,11 @@
         music.loop = true;
         music.play();
     }
-    var json_obj = JSON.parse(Get("https://raw.githubusercontent.com/web-mech/badwords/master/lib/lang.json"));
+    var request = new XMLHttpRequest();
+    request.open("GET", "../RoboticsGame/lang.json", false);
+    request.send(null)
+    var json_obj = JSON.parse(request.responseText);
+    // var json_obj = JSON.parse("lang.json");
     var words = json_obj.words;
     var inputType = 1;
     var input = new CanvasInput({
@@ -62,14 +66,12 @@
         // playerBoosterPic.src = "images/Buttons/music_muted.png"
         ctx = canvas.getContext("2d");
 
-
-
         if (type === "profanity") {
-            profanity.src = "images/profanity.png";
+            profanity.src = "images/Other/profanity.png";
             profanity.onload = function() {
                 ctx.drawImage(profanity, 510 / 1920 * canvas.width, 90 / 1080 * canvas.height, 900 / 1920 * canvas.width, 900 / 1080 * canvas.height);
             }
-            xImage.src = "images/x.png";
+            xImage.src = "images/Buttons/x.png";
             xImage.onload = function() {
                 ctx.drawImage(xImage, 1410 / 1920 * canvas.width, 30 / 1080 * canvas.height, 60 / 1920 * canvas.width, 60 / 1080 * canvas.height);
             }
@@ -94,12 +96,12 @@
         input.destroy();
     }
 
-    function Get(yourUrl) {
-        var Httpreq = new XMLHttpRequest(); // a new request
-        Httpreq.open("GET", yourUrl, false);
-        Httpreq.send(null);
-        return Httpreq.responseText;
-    }
+    // function Get(yourUrl) {
+    //     var Httpreq = new XMLHttpRequest(); // a new request
+    //     Httpreq.open("GET", yourUrl, false);
+    //     Httpreq.send(null);
+    //     return Httpreq.responseText;
+    // }
 
     // function getWordlist() {
     //     var json_obj = JSON.parse(Get("https://raw.githubusercontent.com/web-mech/badwords/master/lib/lang.json"));
@@ -107,11 +109,11 @@
     // }
 
     function setName() {
-        console.log("set name clicked")
+        // console.log("set name clicked")
         // var json_obj = JSON.parse(Get("https://raw.githubusercontent.com/web-mech/badwords/master/lib/lang.json"));
         // var words = json_obj.words;
         if (input.value().length <= maxNameLength && input.value().length != 0 && !(words.some(words => (input.value()).includes(words)))) { //LIMIT Name length
-            console.log("acceptable name")
+            // console.log("acceptable name");
             localStorage.setItem('name', input.value());
             writeScore(localStorage.getItem('highScore') || 0, localStorage.getItem('name'));
             if (localStorage.getItem('highScore') === null) {
@@ -121,7 +123,7 @@
             location.reload();
             // input._x = -200000000;
         } else {
-            console.log("bad name");
+            // console.log("bad name");
             draw("profanity");
             // input.blur();
             // location.reload(100);
@@ -142,11 +144,10 @@
             music.play();
             changeMuteState();
         }
-        updatePauseButtons();
     }
 
 
-    function musicMute() {
+    function musicMuteFunc() {
         if (musicMute === "no") {
             musicMute = "yes";
             music.pause();
@@ -214,57 +215,58 @@
         var canvasHeight = window.innerHeight;
         addButton(132 / 1920 * canvasWidth, 110 / 1080 * canvasHeight, 413 / 1920 * canvasWidth, 193 / 1080 * canvasHeight, backToAbout);
         addButton(694 / 1920 * canvasWidth, 591 / 1080 * canvasHeight, 874 / 1920 * canvasWidth, 808 / 1080 * canvasHeight, muteMute);
-        addButton(1042 / 1920 * canvasWidth, 588 / 1080 * canvasHeight, 1326 / 1920 * canvasWidth, 945 / 1080 * canvasHeight, musicMute);
+        addButton(1042 / 1920 * canvasWidth, 588 / 1080 * canvasHeight, 1326 / 1920 * canvasWidth, 945 / 1080 * canvasHeight, musicMuteFunc);
         addButton(1369 / 1920 * canvasWidth, 295 / 1080 * canvasHeight, 1640 / 1920 * canvasWidth, 392 / 1080 * canvasHeight, setName);
 
         // addButton(103 / 1920 * canvasWidth, 674 / 1080 * canvasHeight, 1640 / 1920 * canvasWidth, 392 / 1080 * canvasHeight, name);
         addButton(1410 / 1920 * canvasWidth, 30 / 1080 * canvasHeight, 1470 / 1920 * canvasWidth, 90 / 1080 * canvasHeight, draw, "reload");
-        }
+    }
 
-        function touches(evt) {
-            var x = evt.changedTouches[0].pageX;
-            var y = evt.changedTouches[0].pageY;
-            checkButtons(x, y);
-        }
+    function touches(evt) {
+        var x = evt.changedTouches[0].pageX;
+        var y = evt.changedTouches[0].pageY;
+        checkButtons(x, y);
+    }
 
-        function clicks(evt) {
-            var x = evt.clientX;
-            var y = evt.clientY;
-            checkButtons(x, y);
-        }
+    function clicks(evt) {
+        var x = evt.clientX;
+        var y = evt.clientY;
+        checkButtons(x, y);
+    }
 
-        function checkButtons(x, y) {
-            for (var i = 0; i < buttons.length; i++) {
-                var b = buttons[i];
-                if (x > b.x1 && x < b.x2 && y > b.y1 && y < b.y2) {
-                    b.callback();
-                }
+    function checkButtons(x, y) {
+        for (var i = 0; i < buttons.length; i++) {
+            var b = buttons[i];
+            if (x > b.x1 && x < b.x2 && y > b.y1 && y < b.y2) {
+                // console.log("match "+i);
+                b.callback();
             }
         }
+    }
 
-        function init() {
-            draw();
-            setButtons();
-            window.addEventListener('touchstart', touches);
-            window.addEventListener('click', clicks);
-        }
+    function init() {
+        draw();
+        setButtons();
+        window.addEventListener('touchstart', touches);
+  //      window.addEventListener('click', clicks);
+    }
 
-        // function checkButtons(evt) {
-        //   var x = evt.changedTouches[0].pageX;
-        //   var y = evt.changedTouches[0].pageY;
-        //   for (var i = 0; i < buttons.length; i++) {
-        //     var b = buttons[i];
-        //     if (x > b.x1 && x < b.x2 && y > b.y1 && y < b.y2) {
-        //       b.callback(b.param);
-        //     }
-        //   }
-        // }
+    // function checkButtons(evt) {
+    //   var x = evt.changedTouches[0].pageX;
+    //   var y = evt.changedTouches[0].pageY;
+    //   for (var i = 0; i < buttons.length; i++) {
+    //     var b = buttons[i];
+    //     if (x > b.x1 && x < b.x2 && y > b.y1 && y < b.y2) {
+    //       b.callback(b.param);
+    //     }
+    //   }
+    // }
 
-        // function init() {
-        //   draw();
-        //   setButtons();
-        //   window.addEventListener('touchstart', checkButtons);
-        // }
+    // function init() {
+    //   draw();
+    //   setButtons();
+    //   window.addEventListener('touchstart', checkButtons);
+    // }
     </script>
 </body>
 
