--- a/game.html
+++ b/game.html
@@ -434,10 +434,10 @@
 				loadFonts();
 				window.addEventListener('touchstart', gameTouchStart);
 				window.addEventListener('touchend', gameTouchEnd);
-				window.addEventListener('mousedown', getClickDown);
-				window.addEventListener('mouseup', getClickUp);
-				window.addEventListener('keydown', spaceDownEventListener);
-				window.addEventListener('keyup', spaceUpEventListener);
+//				window.addEventListener('mousedown', getClickDown);
+//				window.addEventListener('mouseup', getClickUp);
+//				window.addEventListener('keydown', spaceDownEventListener);
+//				window.addEventListener('keyup', spaceUpEventListener);
 
 				myGamePiece = new component(myGameArea.canvas.height * 0.08, myGameArea.canvas.height * 0.08, "red", myGameArea.canvas.width * 0.15, myGameArea.canvas.height * 0.5, "player");
 				myGamePiece.gravity = 0.3;
