--- a/menu.html
+++ b/menu.html
@@ -266,7 +266,7 @@
       }
       if (started != 1) {
         window.addEventListener('touchstart', mainMenuTouchListener);
-        window.addEventListener('click', mainMenuClickListener);
+//        window.addEventListener('click', mainMenuClickListener);
       }
       myMainMenu.start();
     }
