--- a/pit.html
+++ b/pit.html
@@ -120,7 +120,7 @@
       loadBackgroundImage();
       setButtons();
       window.addEventListener('touchstart', touches);
-      window.addEventListener('click', clicks);
+//      window.addEventListener('click', clicks);
     }
   </script>
 </body>
