--- a/menu.html
+++ b/menu.html
@@ -44,7 +44,12 @@
     if (localStorage.getItem('name') == undefined) {
         localStorage.setItem('name', random_name);
     };
-    writeScore(localStorage.getItem('highScore') || localStorage.setItem('highScore', 0), localStorage.getItem('name'));
+    var playerinithighscore = localStorage.getItem('highScore') || localStorage.setItem('highScore', 0);
+    if(playerinithighscore == undefined){
+      playerinithighscore = 0;
+    }
+    var playernickname = localStorage.getItem('name');
+    writeScore(playerinithighscore, playernickname);
 
     // Add similar event handlers for other events
     // // console.log('Orientation is ' + screen.orientation.type);
