--- a/about.html
+++ b/about.html
@@ -119,7 +119,7 @@
         loadBackgroundImage();
         setButtons();
         window.addEventListener('touchstart', touches);
-        window.addEventListener('click', clicks);
+        // window.addEventListener('click', clicks);
     }
     </script>
 </body>
