--- a/cosmetics.html
+++ b/cosmetics.html
@@ -452,7 +452,7 @@
       loadBackground();
       setButtons();
       window.addEventListener('touchstart', touches);
-      window.addEventListener('click', clicks);
+      // window.addEventListener('click', clicks);
     }
   </script>
 </body>
